<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_outdata" />

    <Button
        android:id="@+id/saveId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_save" />
    <Button
        android:id="@+id/showId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_show" />
    <Button
        android:id="@+id/deleteId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_delete" />
    <TextView
        android:id="@+id/show_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/db_showtext"/>
</LinearLayout>