<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.skl.MainActivity">

    <Button
        android:id="@+id/SharedPreferencesId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SharedPreferences" />

    <Button
        android:id="@+id/DBFlowId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DBFlow" />

    <Button
        android:id="@+id/memoryId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory" />
    <Button
        android:id="@+id/storageId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storage" />


</LinearLayout>
